fixed a bug where fullsize 1080p screenshots would appear halfway offscreen to the left on smaller screens

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -19,6 +19,21 @@ p, blockquote, pre, hr,
 
 }
 
+/*
+style="z-index:5; position: fixed; width: 100%; height:100%; left: 0; top: 0; background: rgba(0,0,0,0.75); display: none; transform: translateX(-25%);" 
+*/
+.fullsizeGallery {
+	z-index: 5;
+	position: fixed;
+	width: 100%;
+	height: 100%;
+	left: 0px;
+	top: 0px;
+	background: rgba(0, 0, 0, 0.75);
+	display: none;
+	transform: translateX(-25%);
+}
+
 .galleryButton {
     transform: translateY(-50%);
     position: relative;
